# nucleolus

./: .gitignore  CMakeLists.txt  requirements.txt
executable/: BNF.out.txt  input.txt  output_game.txt  results.txt  secci.out.txt  v.txt
notebook/: generate_test.ipynb
source/: BNF.cpp  BNF.h  GLPK.cpp  GLPK.h  output_game.cpp  secci.cpp  secci.h
test/results/: v1n10j10.txt  v1n10j11.txt  v1n10j12.txt  v1n10j13.txt  v1n10j14.txt  v1n10j15.txt  v1n10j16.txt  v1n10j17.txt  v1n10j18.txt  v1n10j19.txt  v1n10j2.txt  v1n10j20.txt  v1n10j21.txt  v1n10j22.txt  v1n10j23.txt  v1n10j24.txt  v1n10j25.txt  v1n10j26.txt  v1n10j27.txt  v1n10j28.txt  v1n10j29.txt  v1n10j3.txt  v1n10j30.txt  v1n10j31.txt  v1n10j32.txt  v1n10j33.txt  v1n10j34.txt  v1n10j35.txt  v1n10j36.txt  v1n10j37.txt  v1n10j38.txt  v1n10j39.txt  v1n10j4.txt  v1n10j40.txt  v1n10j41.txt  v1n10j42.txt  v1n10j43.txt  v1n10j44.txt  v1n10j45.txt  v1n10j46.txt  (+1957 more)
